crates/parser/src/snapshots/parser__tests__parse_inline_err.snap
---
source: crates/parser/src/tests.rs
description: "module Foo {\n   domain Bar ]][]\n   declare Func: [Bar] -> Bar\n}\n"
input_file: crates/parser/test_data/parser/inline/err/file/0095_source_error_with_extra_junk.ath
---
SOURCE_FILE
  MODULE_DIR
    MODULE_KW "module"
    WHITESPACE " "
    NAME
      IDENT "Foo"
    WHITESPACE " "
    L_CURLY "{"
    WHITESPACE "\n   "
    DOMAIN_DIR
      DOMAIN_KW "domain"
      WHITESPACE " "
      IDENT_SORT_DECL
        NAME
          IDENT "Bar"
    WHITESPACE " "
    ERROR
      R_BRACK "]"
    ERROR
      R_BRACK "]"
    PHRASE_STMT
      LIST_EXPR
        L_BRACK "["
        R_BRACK "]"
    WHITESPACE "\n   "
    INFIX_DECLARE_DIR
      DECLARE_KW "declare"
      WHITESPACE " "
      NAME
        IDENT "Func"
      COLON ":"
      WHITESPACE " "
      FUNC_SORTS
        L_BRACK "["
        IDENT_SORT
          NAME_REF
            IDENT "Bar"
        R_BRACK "]"
      WHITESPACE " "
      THIN_ARROW "->"
      WHITESPACE " "
      IDENT_SORT
        NAME_REF
          IDENT "Bar"
    WHITESPACE "\n"
    R_CURLY "}"
  WHITESPACE "\n"
error 27: unexpected input, expected statement in module body
error 28: unexpected input, expected statement in module body

