crates/parser/src/snapshots/parser__tests__parse_ok@by-ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "(!absurd (q by (!mp premise p)))\n"
input_file: crates/parser/test_data/parser/ok/file/by-ded.ath
---
SOURCE_FILE
  PHRASE_STMT
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        NAME_REF
          IDENT "absurd"
      WHITESPACE " "
      BY_DED
        L_PAREN "("
        IDENT_EXPR
          NAME_REF
            IDENT "q"
        WHITESPACE " "
        BY_KW "by"
        WHITESPACE " "
        BANG_METHOD_CALL_DED
          L_PAREN "("
          BANG "!"
          IDENT_EXPR
            NAME_REF
              IDENT "mp"
          WHITESPACE " "
          IDENT_EXPR
            NAME_REF
              IDENT "premise"
          WHITESPACE " "
          IDENT_EXPR
            NAME_REF
              IDENT "p"
          R_PAREN ")"
        R_PAREN ")"
      R_PAREN ")"
  WHITESPACE "\n"

